--- a/CE605A_231030015_Assingment0.ipynb
+++ b/CE605A_231030015_Assingment0.ipynb
@@ -3,7 +3,10 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "mount_file_id": "1dwMIYd93lYjC0RgJqRjwd5MRad0f_JEZ",
+      "authorship_tag": "ABX9TyPOqNjmqMh6vO9uLlsh6XT5",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -14,6 +17,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/chai1anya/CE605aAssingments/blob/main/CE605A_231030015_Assingment0.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "execution_count": 34,
